<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="60dp"
    tools:context=".Activity.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="26dp"
            android:layout_marginEnd="26dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/emailflying" />

                <TextView
                    android:id="@+id/txt_login_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:paddingRight="120dp"
                    android:text="@string/Hear_From_You"
                    android:textColor="@color/colorBlack"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/txt_login_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:paddingRight="120dp"
                    android:text="@string/Contact_US" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:drawableLeft="@mipmap/ic_profile"
                    android:drawableStart="@mipmap/ic_profile"
                    android:drawablePadding="15dp"
                    android:hint="@string/Name"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@mipmap/ic_email"
                    android:drawableStart="@mipmap/ic_email"
                    android:drawablePadding="15dp"
                    android:hint="@string/Email"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@mipmap/ic_phone"
                    android:drawableStart="@mipmap/ic_phone"
                    android:drawablePadding="15dp"
                    android:hint="@string/Phone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_Message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:drawableStart="@mipmap/ic_message"
                    android:drawableLeft="@mipmap/ic_message"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:hint="@string/Description"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="12dp" />


                <Button
                    android:id="@+id/btn_Send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_rectangle"
                    android:text="@string/SEND_NOW"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="30dp"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>