<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_main"
    tools:context=".Activity.Edit_Adrz_Activity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edt_adrz_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/Name"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_adrz_Address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/Address"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_adrz_Region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:focusable="false"
                    android:hint="Region"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_adrz_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/Phone"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Type_of_Address" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioGroup_AdrzType"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton_home"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:buttonTint="@color/colorPrimary"
                            android:checked="true"
                            android:gravity="left"
                            android:text="@string/Home"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/radioButton_office"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:buttonTint="@color/colorPrimary"
                            android:gravity="left"
                            android:text="@string/Office"
                            android:textSize="16sp" />


                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_chk_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@mipmap/ic_radio_not_selected" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:layout_marginLeft="6dp"
                        android:gravity="center"
                        android:text="@string/Make_this_My_default_address" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_Update_Adrz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/btn_rectangle"
                        android:text="@string/UPDATE"
                        android:textSize="16dp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</FrameLayout>